# ACR

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main  signal.txt
include/: acr.h  acr_wav_chunks.h  acr_wav_header.h
src/: acr.c  acr_internal.h  acr_wav_chunks.c  helper-functions.c  helper-functions.h  logger.c  logger.h  main  main.c  resource-manager.c  resource-manager.h  wav_header.c  wav_header.h  wav_header_types.h  wav_types.h
